<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@mipmap/login_sweet_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingEnd="40dp"
    android:paddingStart="40dp"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/login_sweets_title"
            android:textColor="#fbe6af"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/login_sweets_title2"
            android:textColor="#fffffb"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/login_sweets_title3"
            android:textColor="#f5ecb1"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/login_sweet_btn"/>

    </LinearLayout>
</RelativeLayout>