<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/shape_circle_rect_white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/close_pressed"
                />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/redpacket" />

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/redpacket_share_dialog_content"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/redpacket_share_diaog_hint"
            android:textColor="@color/text_lowgray"
            android:textSize="@dimen/text_content" />


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/redpacket_btn_height"
            android:layout_margin="20dp"
            android:background="@drawable/shape_circle_rect_blue_deep"
            android:text="@string/redpacket_share_diaog_button"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>
</LinearLayout>